src/test/deca/syntax/invalid/declVar-invalidMultipleDecl.synt
declVar-invalidMultipleDecl.deca:2: